# mne-opc-p9

./: .gitignore  LICENSE  README.md  bootstrap-emr.sh  pyproject.toml  pytest.ini
.agent/patch/20251014/: session.events.jsonl
.agent/patch/20251015/: session.events.jsonl
docs/project/: PRD_BRIEF.md
docs/project/guides/: aws-cost-optimization.md  aws-emr-creation-guide-v2.md  aws-setup-guide.md  dev-setup.md
docs/project/overview/: architecture.md  stack.md
docs/project/soutenance/: README.md  checklist-aws.md  guide-powerpoint.md  instructions-diagrammes.md  metriques.md  notes-presentation.md  outline.md  questions-reponses.md
notebook/: P8_Notebook_Linux_EMR_PySpark_V1.0.ipynb
scripts/: analyze_dataset.py  create_model_metadata.py  generate_pca_variance_plot.py  implement_pca.py  pca_validation.py  setup.sh  test.sh  test_broadcast_optimization.py  test_pipeline_complet.py  validate_pipeline_results.py
src/: __init__.py  utils.py
tests/: __init__.py  test_utils.py
